--- a/src/front/views/main.ejs
+++ b/src/front/views/main.ejs
@@ -8,11 +8,18 @@
 <body>
     <div class="container">
         <h1>Welcome</h1>
+        <% if (locals.success_msg) { %>
+            <div class="alert alert-success"><%= success_msg %></div>
+        <% } %>
         <nav class="navbar">
             <ul class="nav-links">
-                <li class="nav-item"><a href="/users/login">Login</a></li>
-                <li class="nav-item"><a href="/users/register">Register</a></li>
-                <li class="nav-item"><a href="snippets">View Snippets</a></li>
+                <% if (!locals.userId) { %>
+                    <li class="nav-item"><a href="/users/login">Login</a></li>
+                    <li class="nav-item"><a href="/users/register">Register</a></li>
+                <% } else { %>
+                    <li class="nav-item"><a href="/users/logout">Logout</a></li>
+                <% } %>
+                <li class="nav-item"><a href="/snippets">View Snippets</a></li>
             </ul>
         </nav>
     </div>
