--- a/src/front/views/login.ejs
+++ b/src/front/views/login.ejs
@@ -3,11 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
-    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     <h1>Login</h1>
-    <form action="/users/login" method="post">
+    <form action="/users/login" method="POST">
+        <div>
+            <label for="username">Username:</label>
+            <input type="text" id="username" name="username" required>
+        </div>
+        <div>
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password" required>
+        </div>
+        <button type="submit">Login</button>
     </form>
 </body>
 </html>
