--- a/src/front/views/register.ejs
+++ b/src/front/views/register.ejs
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <title>User Registration</title>
     <link rel="stylesheet" href="/css/register.css">
+    <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
+    <%- include('navbar', { user: null }) %>
     <div class="register-container">
         <div class="register-form">
             <h1>Registration Details</h1>
