--- a/public/css/register.css
+++ b/public/css/register.css
@@ -1,28 +1,14 @@
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
-body,
-html {
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-family: "Arial", sans-serif;
-  background-color: #f0f0f0;
-}
-
 .register-container {
   background-color: transparent;
-  padding: 20px;
+  padding: 10px;
   border-radius: 5px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  width: 300px;
+  margin: 20px auto;
 }
 
 .register-form {
-  width: 300px;
+  width: 250px;
 }
 
 .input-group {
