--- a/src/front/views/CreateSnippets.ejs
+++ b/src/front/views/CreateSnippets.ejs
@@ -2,13 +2,13 @@
 <html>
 <head>
     <title>Create a Snippet</title>
+    <link rel="stylesheet" href="/css/snippet.css">
 </head>
 <body>
     <h1>Create a New Snippet</h1>
     <form action="/snippets" method="POST">
         <input type="text" name="title" placeholder="Title" required>
         <textarea name="content" placeholder="Content" required></textarea>
-        <input type="text" name="author" placeholder="Author" required>
         <button type="submit">Submit</button>
     </form>
 </body>
