--- a/src/front/views/dashboard.ejs
+++ b/src/front/views/dashboard.ejs
@@ -1,13 +1,14 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Dashboard</title>
+    <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
-    <h1>Welcome to the Dashboard</h1>
-    <p>You are logged in!</p>
-    <a href="/users/logout">Logout</a>
+    <div class="container">
+        <h1>Welcome to the Dashboard</h1>
+        <%- include('navbar', { user: user }) %>
+    </div>
 </body>
 </html>
