--- a/src/front/views/ListSnippets.ejs
+++ b/src/front/views/ListSnippets.ejs
@@ -3,20 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <title>Snippet List</title>
+    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/snippetList.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.3.1/styles/default.min.css">
 </head>
 <body>
-    <h1>Snippet List</h1>
-    <% if (snippets && snippets.length > 0) { %>
-        <% snippets.forEach(function(snippet) { %>
-            <div>
-                <h2><%= snippet.title %></h2>
-                <p><%= snippet.content %></p>
-                <p><%= snippet.author %></p>
-            </div>
-        <% }); %>
-    <% } else { %>
-        <p>No snippets found.</p>
-    <% } %>
-    <button onclick="window.location.href='/snippets/new'">Create New Snippet</button>
+    <%- include('navbar', { user: user }) %>
+    <div class="container">
+        <h1>Snippet List</h1>
+        <% if (snippets && snippets.length > 0) { %>
+            <% snippets.forEach(function(snippet) { %>
+                <div class="snippet" id="snippet-<%= snippet._id %>">
+                    <button onclick="handleDelete('/snippets/delete/<%= snippet._id %>', '<%= snippet._id %>')" class="btn btn-danger delete-btn">Delete</button>
+                    <h2><%= snippet.title %></h2>
+                    <pre><code class="language-javascript"><%= snippet.content %></code></pre>
+                    <p class="author">
+                        Created by: <%= snippet.author.username ? snippet.author.username : 'Unknown' %>
+                    </p>
+                    
+                </div>
+            <% }); %>
+        <% } else { %>
+            <p>No snippets found.</p>
+        <% } %>
+    </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.3.1/highlight.min.js"></script>
+    <script>
+        hljs.highlightAll();
+        
+        async function handleDelete(deleteUrl, snippetId) {
+            if (!confirm('Are you sure you want to delete this snippet?')) return;
+            
+            const response = await fetch(deleteUrl, {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json',
+                
+                },
+                body: JSON.stringify({ _method: 'DELETE' })
+            });
+
+            if (response.ok) {
+                document.getElementById(`snippet-${snippetId}`).remove();
+            } else {
+                alert('Failed to delete snippet.');
+            }
+        }
+    </script>
 </body>
 </html>
