--- a/public/css/register.css
+++ b/public/css/register.css
@@ -30,7 +30,7 @@
 }
 
 .btn-register {
-  background-color: #007bff;
+  background-color: #222730;
   color: white;
   padding: 10px 15px;
   border: none;
@@ -59,7 +59,7 @@
 }
 
 .btn-back {
-  background-color: #007bff;
+  background-color: #222730;
   color: white;
   border: none;
   cursor: pointer;
