--- a/src/front/views/register.ejs
+++ b/src/front/views/register.ejs
@@ -34,7 +34,7 @@
                 </div>
                 <div class="form-actions">
                     <button type="submit" class="btn-register">sign up</button>
-                    <a href="/" class="btn-back">main menu</a>
+                    <a href="/" class="btn-back">home</a>
                 </div>
             </form>
         </div>
