--- a/public/css/login.css
+++ b/public/css/login.css
@@ -2,7 +2,7 @@
     max-width: 400px;
     margin: 20px auto;
     padding: 20px;
-    background-color: #ffffff;
+    background-color: lightgray;
     border-radius: 5px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
@@ -20,7 +20,7 @@
 .input-group input {
     width: 100%;
     padding: 10px;
-    border: 1px solid #ccc;
+    border: 1px solid #8f4a4a;
     border-radius: 4px;
 }
 
@@ -29,7 +29,7 @@
     padding: 10px;
     border: none;
     border-radius: 4px;
-    background-color: #007bff;
+    background-color: #222730;
     color: white;
     cursor: pointer;
     font-size: 16px;
