--- a/public/css/snippetList.css
+++ b/public/css/snippetList.css
@@ -71,10 +71,38 @@
 }
 .delete-btn {
     position: absolute;
-    color: red;
+    color: rgb(255, 255, 255);
+    background-color: red;
     top: 10px;
     right: 10px;
     z-index: 2;
     padding: 5px 10px;
     font-size: 0.8rem;
   }
+  .edit-btn {
+    position: absolute;
+    color: #fff;
+    background-color: #007bff;
+    top: 10px;
+    right: 60px;
+    z-index: 2;
+    padding: 5px 10px;
+    font-size: 0.8rem;
+    border-radius: 4px;
+    text-decoration: none;
+    margin-right: 20px;
+}
+
+.update-btn {
+    color: #fff;
+    background-color: #28a745;
+    padding: 5px 10px;
+    font-size: 0.8rem;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.edit-btn:hover, .update-btn:hover {
+    opacity: 0.8;
+}
