--- a/src/front/views/dashboard.ejs
+++ b/src/front/views/dashboard.ejs
@@ -8,6 +8,8 @@
 <body>
     <div class="container">
         <%- include('navbar', { user: user }) %>
+        <%- include('messages') %>
+        <h1>Welcome to the Dashboard</h1>
     </div>
 </body>
 </html>
