--- a/src/front/views/register.ejs
+++ b/src/front/views/register.ejs
@@ -11,6 +11,7 @@
     <div class="register-container">
         <div class="register-form">
             <h1>Registration Details</h1>
+            <%- include('messages') %>
             <form action="/users/register" method="POST">
                 <div class="input-group">
                     <label for="firstName">First Name:</label>
