--- a/public/css/main.css
+++ b/public/css/main.css
@@ -61,3 +61,20 @@ h1 {
 .user-greeting {
   margin-left: auto;
 }
+.alert {
+  padding: 8px 15px;
+  margin-bottom: 10px;
+  border-radius: 4px;
+}
+
+.alert-success {
+  background-color: #d4edda;
+  border-color: #c3e6cb;
+  color: #155724;
+}
+
+.alert-danger {
+  background-color: #f8d7da;
+  border-color: #f5c6cb;
+  color: #721c24;
+}
