--- a/src/front/views/CreateSnippets.ejs
+++ b/src/front/views/CreateSnippets.ejs
@@ -5,12 +5,14 @@
     <link rel="stylesheet" href="/css/snippet.css">
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.3.1/styles/default.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.3.1/highlight.min.js"></script>
 </head>
 <body>
     
     <%- include('navbar', { user: user }) %>
+    <div class="container-form">
     <h1>Create a New Snippet</h1>
-    <form class="container-form" action="/snippets" method="POST" id="snippetForm">
+    <form class="container" action="/snippets" method="POST" id="snippetForm">
         <div>
             <label for="title">Title:</label>
             <input type="text" id="title" name="title" required>
@@ -27,14 +29,12 @@
         </div>
         <div>
             <label for="content">Content:</label>
-
-            <div id="codeInput" contenteditable="true" class="hljs"></div>
-            <input type="hidden" name="content" id="hiddenContent">
+            <textarea id="content" name="content" class="hljs" required></textarea>
         </div>
-        <button type="submit">Create Snippet</button>
+        <button type="submit" class="create-btn">Create Snippet</button>
     </form>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.3.1/highlight.min.js"></script>
+</div>
+  
     <script>
         const codeInput = document.getElementById('codeInput');
         const hiddenContent = document.getElementById('hiddenContent');
