--- a/src/front/views/login.ejs
+++ b/src/front/views/login.ejs
@@ -11,6 +11,7 @@
 
     <div class="login-container">
         <h1>Login</h1>
+        <%- include('messages') %>
         <form action="/users/login" method="POST">
             <div class="input-group">
                 <label for="username">Username:</label>
