--- a/src/front/views/main.ejs
+++ b/src/front/views/main.ejs
@@ -8,9 +8,7 @@
 <body>
     <div class="container">
         <h1>Welcome</h1>
-        <% if (locals.success_msg) { %>
-            <div class="alert alert-success"><%= success_msg %></div>
-        <% } %>
+        <%- include('messages') %>
         <%- include('navbar', { user: user }) %>
 
     </div>
