--- a/src/front/views/updateSnippet.ejs
+++ b/src/front/views/updateSnippet.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>
     <%- include('navbar', { user: user }) %>
-    <div class="container">
+    <div class="container-form">
         <h1>Edit Snippet</h1>
         <form id="container" action="/snippets/update/<%= snippet._id %>" method="post">
             <input type="hidden" name="_method" value="PUT">
@@ -31,7 +31,7 @@
                 <textarea id="content" name="content" required><%= snippet.content %></textarea>
             </div>
             
-            <button type="submit" class="btn update-btn">Update</button>
+            <button type="submit" class="btn update-btn1">Update</button>
         </form>
     </div>
 </body>
